--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
         <title>Matu Valentin Home Site</title>
     </head>
     <body>
-        <h1>Hola Mundo, yo soy Matu! Mateo Valentin Ibanez!</h1>
+        <h1>Hola a todos, yo soy Matu! Mateo Valentin Ibanez!</h1>
 	<br/>
 	<p>El mas lindo del mundo!!</p>
 	<br/>
-	<p>(Version Github)</p>
+	<p>(Version Github 2)</p>
 	<br/>
 	<img src="imagen.jpg" width=400/>
     </body>
