Modifica una linea

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <body>
         <h1>Hola a todos, yo soy Matu! Mateo Valentin Ibanez!</h1>
 	<br/>
-	<p>El mas lindo del mundo!!</p>
+	<p>El nene mas lindo del mundo!!</p>
 	<br/>
-	<p>(Version Github 2)</p>
+	<p>(Version Github 3)</p>
 	<br/>
 	<img src="imagen.jpg" width=400/>
     </body>
