Modifica varias lineas

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>Matu Valentin Home Site</title>
+        <title>Mateo Valentin Home Site</title>
     </head>
     <body>
-        <h1>Hola a todos, yo soy Matu! Mateo Valentin Ibanez!</h1>
+        <h1>Hola a todos, yo soy Matu!/h1>
 	<br/>
 	<p>El nene mas lindo del mundo!!</p>
 	<br/>
-	<p>(Version Github 3)</p>
+	<p>(Version Github 4)</p>
 	<br/>
 	<img src="imagen.jpg" width=400/>
     </body>
