--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
         <title>Mateo Valentin Home Site</title>
     </head>
     <body>
-        <h1>Hola a todos, yo soy Matu!/h1>
+        <h1>Hola a todos, yo soy Matu!</h1>
 	<br/>
 	<p>El nene mas lindo del mundo!!</p>
 	<br/>
-	<p>(Version Github 4)</p>
+	<p>(Version Github 5)</p>
 	<br/>
 	<img src="imagen.jpg" width=400/>
     </body>
