--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Mateo Valentin Home Site</title>
     </head>
-    <body style="background-color:yellow;">
+    <body style="background-color:blue;">
         <h1>Hola a todos, yo soy Matu!</h1>
 	<br/>
 	<p>El nene mas lindo del mundo!!</p>
